syntax = "proto3";

option csharp_namespace = "StorageConnector";

package storage;

service StorageService {
    rpc GetData (GetDataRequest) returns (GetDataResponse);
    rpc CreateData (CreateDataRequest) returns (CreateDataResponse);
    rpc UpdateData (UpdateDataRequest) returns (UpdateDataResponse);
    rpc DeleteData (DeleteDataRequest) returns (DeleteDataResponse);
}

// Request message for getting data by key
message GetDataRequest {
    string key = 1; // Key to look up in the storage or cache
}

// Response message for returning data associated with a key
message GetDataResponse {
    string value = 1; // Value associated with the key
    bool found = 2;   // Indicates if the key was found in the storage or cache
}

// Request message for creating new key-value pair data
message CreateDataRequest {
    string key = 1;   // Key for the new data
    string value = 2; // Value to associate with the key
}

// Response message for confirming data creation
message CreateDataResponse {
    bool success = 1; // Indicates if the creation was successful
}

// Request message for updating data associated with a key
message UpdateDataRequest {
    string key = 1;   // Key of the data to update
    string value = 2; // New value to associate with the key
}

// Response message for confirming data update
message UpdateDataResponse {
    bool success = 1; // Indicates if the update was successful
}

// Request message for deleting data by key
message DeleteDataRequest {
    string key = 1; // Key of the data to delete
}

// Response message for confirming data deletion
message DeleteDataResponse {
    bool success = 1; // Indicates if the deletion was successful
}