using System.Threading.Tasks;
using Grpc.Core;
using Microsoft.Extensions.Logging;

public class StorageService : Storage.StorageService.StorageServiceBase
{
    private readonly ILogger<StorageService> _logger;

    public StorageService(ILogger<StorageService> logger)
    {
        _logger = logger;
    }

    public override Task<GetDataResponse> GetData(GetDataRequest request, ServerCallContext context)
    {
        // Implement logic to get data from Storage Middleware
        return Task.FromResult(new GetDataResponse { Data = "Some Robotic Arm Info" });
    }

    public override Task<CreateDataResponse> CreateData(CreateDataRequest request, ServerCallContext context)
    {
        // Implement logic to create data in Storage Middleware
        return Task.FromResult(new CreateDataResponse { Success = true });
    }

    public override Task<UpdateDataResponse> UpdateData(UpdateDataRequest request, ServerCallContext context)
    {
        // Implement logic to update data in Storage Middleware
        return Task.FromResult(new UpdateDataResponse { Success = true });
    }

    public override Task<DeleteDataResponse> DeleteData(DeleteDataRequest request, ServerCallContext context)
    {
        // Implement logic to delete data from Storage Middleware
        return Task.FromResult(new DeleteDataResponse { Success = true });
    }
}
